# CLLauncher

./: .gitignore  README.md  dev.ps1  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
examples/: example-api-response-modpacks.json  example-config.json  example-manifest.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/accounts/: microsoft.rs  mod.rs  offline.rs  storage.rs
src-tauri/src/commands/: accounts.rs  config.rs  download.rs  fs.rs  java.rs  launch.rs  logs.rs  manifest.rs  mod.rs
src-tauri/src/java/: mod.rs
src-tauri/src/minecraft/: assets.rs  installer.rs  launch.rs  loaders.rs  mod.rs
src-tauri/src/tests/: hash_tests.rs  java_tests.rs  manifest_tests.rs  mod.rs  path_safety_tests.rs
src/api/: client.ts  endpoints.ts  queryKeys.ts
src/components/account/: AccountCard.tsx  AddAccountDialog.tsx
src/components/home/: ContinuePlaying.tsx  HeroFeatured.tsx  HomeModpackCard.tsx  NewsStrip.tsx  QuickStats.tsx  SectionHeader.tsx  (+1 more)
src/config/: branding.ts
src/hooks/: useInstallModpack.ts  useLaunchMinecraft.ts
src/lib/: utils.ts
src/pages/: AccountsPage.tsx  DownloadsPage.tsx  HomePage.tsx  InstalledPage.tsx  LogsPage.tsx  ModpackDetailPage.tsx  ModpacksPage.tsx  NewsDetailPage.tsx  NewsPage.tsx  ServersPage.tsx  SettingsPage.tsx
src/store/: accountStore.ts  apiStatusStore.ts  instanceStore.ts  launchLogStore.ts  logStore.ts  settingsStore.ts
src/types/: index.ts
(+39 files in other folders)
