[package]
name = "cl-launcher"
version = "2.0.0"
description = "CraftersLand Modpack Launcher"
authors = ["CraftersLand <support@craftersland.org>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "cl_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
futures = "0.3"
futures-util = "0.3"
dirs = "5"
walkdir = "2"
zip = "2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
once_cell = "1"
uuid = { version = "1", features = ["v4", "v5"] }
regex = "1"
rand = "0.8"
open = "5"
semver = "1"
which = "6"
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
